fix(cors): add connect.gyanvaniai.online origin to CORS configuration and ignore *.hprof