@@ -44,7 +44,7 @@ public class SecurityConfig {
      * Comma-separated allowed origins from env (e.g. https://app.yourcrm.com,http://localhost:3000).
      * Defaults to localhost:3000 for local development.
      */
-    @Value("${app.cors.allowed-origins:http://localhost:3000}")
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173,https://connect.gyanvaniai.online,https://gyanvaniai.online,https://*.gyanvaniai.online}")
     private String allowedOrigins;
 
     @Bean
@@ -201,10 +201,8 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOriginPatterns(origins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "X-Hub-Signature-256", "X-Tenant-ID", "X-Trace-ID"
-        ));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization", "X-Tenant-ID", "Content-Disposition"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
